# QT

Calculator/main/: CMakeLists.txt  Main.qml
basic/main/: AnchorsEg.qml  ButtonEg.qml  CMakeLists.txt  DialogEg.qml  ItemEg.qml  Rectan.qml  RowLayoutEg.qml  StackLayoutEg.qml  WindowEg.qml  main.cpp
snake/: Main.qml
